Auth Added Successfully with handling Cookies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 jwt.secret=THIS_IS_A_SUPER_SECRET_KEY_32_CHARS_LONG!!
 jwt.expiry=3600
+cookie_exiry = 3600
